--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -45,7 +45,7 @@
     </div>
 
 
-    <div class="body" style="background-color: white; margin-bottom: 35px;">
+    <div class="body" style="background-color: white;">
         <div>
             <ion-item color="light">
                 <ion-label color="primary" style="font-size: 15px;">Orders Due Today</ion-label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
