--- a/src/app/notifications/notifications.page.html
+++ b/src/app/notifications/notifications.page.html
@@ -1,15 +1,19 @@
 <ion-header>
     <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+            <ion-menu-button autoHide="false"></ion-menu-button>
+          </ion-buttons>
         <!-- <ion-buttons slot="start" (click)="back()">
         <ion-icon name="arrow-back" size="large"></ion-icon>
         </ion-buttons> -->
-        <ion-title text-center>Notifications</ion-title>
+        <ion-title text-center style="margin-right: 25px;">Notifications</ion-title>
     </ion-toolbar>
 </ion-header>
 
 
 
-<ion-content>
+
+<ion-content style="background: #dedede;">
     <div style="text-align: center; margin-top: 40%;" *ngIf="none">
         <div class="icon">
             <ion-icon  size="large" src="../../assets/images/alarm.svg"></ion-icon>
@@ -19,28 +23,19 @@
     </div>
 
 
-    <div>
+    <div style="margin-right: 15px; margin-left: 15px;">
         <ion-card *ngFor="let item of notices"  [ngClass]="{'unread': item.status == 'unread'}">
-        <ion-row padding>
-            <ion-col size="3" >
-            <ion-avatar>
-                <img src="../../assets/images/icon.png">
-            </ion-avatar>
-            </ion-col>
-            <ion-col style="text-align: left;padding-top: 20px;">
-            <ion-label>{{item.Title}}</ion-label><br>
-            <ion-label>{{ item.Date.toDate() | date }}</ion-label>
-            </ion-col>
-        </ion-row>
-        <ion-card-content>
-            <p>
-            A New  order for : 
-            </p>
-            <blockquote>
-            <span *ngFor="let n of item.message">{{n}}&nbsp;,</span>
-            </blockquote>
-            
-        </ion-card-content>
+            <div style="margin-left: 15px; margin-top: 10px;">
+                    <img src="../../assets/images/icon.png" style="width: 30px; height: 30px;">
+            </div>
+            <div style="position: absolute; margin-top: -30px; margin-left: 55px;">
+                <div style="font-size: 13px; color: #737373; font-weight: bold; margin-bottom: 5px;">{{item.Title}}</div>
+                <div style="font-size: 11px; color: #737373;">{{ item.Date.toDate() | date }}</div>
+            </div>
+            <ion-card-content style="margin-top: 5px;">
+                <div style="font-size: 13px; font-weight: bold; color: #737373;">A New  order for :</div>
+                <div style="font-size: 12px; color: #737373;" *ngFor="let n of item.message">{{n}}, </div>
+            </ion-card-content>
         </ion-card>
     </div>
   <!-- <div class="ion-text-center" style="margin-top: 200px;">
