--- a/src/app/notifications/notifications.page.scss
+++ b/src/app/notifications/notifications.page.scss
@@ -1,8 +1,8 @@
 ion-card{
   margin-left: 0px;
   margin-right: 0px;
-  border-radius: 10px ;
-  background-color: lavender;
+  border-radius: 5px ;
+  // background-color: lavender;
 }
 ion-avatar{
   text-align: center;
