--- a/src/app/orders/orders.page.html
+++ b/src/app/orders/orders.page.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-title text-center *ngIf="view"> {{prod.username}}'s Order <br></ion-title>
         <ion-buttons slot="end" style="margin-right: 5px;">
-            <ion-icon style="width: 20px; height: 20px; margin-right: 5px;" color="success" (click)="callUserNumber(userDetail.phone)" name="call" size="large"></ion-icon>
+            <ion-icon style="width: 20px; height: 20px; margin-right: 5px;" (click)="callUserNumber(userDetail.phone)" name="call" size="large"></ion-icon>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
