--- a/src/app/products/products.page.html
+++ b/src/app/products/products.page.html
@@ -1,128 +1,134 @@
 <ion-content color="primary">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start" padding>
-      <ion-icon name="arrow-back" (click)="back()"></ion-icon>
-    </ion-buttons>
-    <ion-title>Add to stock</ion-title>
-  </ion-toolbar>
-  <div class="body" *ngIf="type">
+    <ion-toolbar color="primary">
+        <ion-buttons slot="start">
+        <ion-icon style="width: 20px; height: 20px; margin-left: 5px;" name="arrow-back" (click)="back()"></ion-icon>
+        </ion-buttons>
+        <ion-title text-center style="margin-right: 15px;">Add to stock</ion-title>
+    </ion-toolbar>
 
-    <div class="buttons">
-      <ion-button expand="block" shape="round" (click)="addNewProduct()">New Product</ion-button><br><br><br>
-      <ion-button expand="block" shape="round" (click)="existingProduct()">Existing Product</ion-button><br><br><br>
-      <ion-button expand="block" shape="round" (click)="categoryModal()">New Category</ion-button>
+
+    <div class="card-main" style="background-color: white;" *ngIf="type">
+
+        <div class="buttons">
+            <ion-button expand="full" (click)="addNewProduct()">New Product</ion-button><br>
+            <ion-button expand="full" (click)="existingProduct()">Existing Product</ion-button><br>
+            <ion-button expand="full" (click)="categoryModal()">New Category</ion-button>
+        </div>
     </div>
-  </div>
-  <div class="body" *ngIf="existing">
-    <ion-buttons slot="start" style="padding-top: 10px;">
-      <ion-button (click)="close()">
-        <ion-icon size="large" color="primary" name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-row padding text-center>
-      <ion-col>
-        <ion-label class="title">Choose category to filter</ion-label>
-        <ion-select placeholder="category" [(ngModel)]="category" (ionChange)="setFilteredItems()">
-          <ion-select-option *ngFor="let item of categories.categories">{{item}}</ion-select-option>
-        </ion-select>
-      </ion-col>
-      <ion-col size="4">
-        <ion-icon name="pricetags" class="image" color="primary"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-item text-center *ngIf="category != null">
-      <ion-input type="text" clearInput placeholder="Enter product name"></ion-input>
-      <ion-icon name="search" slot="end"></ion-icon>
-    </ion-item>
-    <ion-item text-center color="medium">
-      <ion-col size="2">
-        Icon
-      </ion-col>
-      <ion-col size="4">
-        Product
-      </ion-col>
-      <ion-col size="2">
-        Stock
-      </ion-col>
-      <ion-col size="2">
-        Units
-      </ion-col>
-      <ion-col size="2">
-        Price
-      </ion-col>
-    </ion-item>
-    <ion-item text-center (click)="viewProduct(item)" *ngFor="let item of products">
-      <ion-col text-center size="2">
-        <ion-thumbnail>
-          <img [src]="item.image">
-        </ion-thumbnail>
-      </ion-col>
-      <ion-col size="4">
-        {{item.product}}
-      </ion-col>
-      <ion-col size="2">
-        {{item.stock}}
-      </ion-col>
-      <ion-col size="2">
-        {{item.quantity}}
-      </ion-col>
-      <ion-col size="2">
-        {{item.currentprice}}
-      </ion-col>
-    </ion-item>
 
-  </div>
+    <!-- EXISTING PRODUCT -->
+    <div class="body" *ngIf="existing">
+        <ion-buttons slot="start" style="padding-top: 10px; margin-bottom: 5px;">
+            <ion-button (click)="close()">
+                <ion-icon size="small" style="width: 20px; height: 20px;" color="primary" name="close"></ion-icon>
+            </ion-button>
+        </ion-buttons>
 
-  <div *ngIf="newProduct" class="body">
-    <ion-buttons slot="start" style="padding-top: 10px;">
-      <ion-button (click)="close()">
-        <ion-icon size="large" color="primary" name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <form (ngSubmit)="addProduct()" [formGroup]="productForm">
-      <ion-list>
-        <ion-item>
-          <ion-input type="text" formControlName="product" placeholder="Enter Product name" required></ion-input>
+        <ion-row no-padding text-center>
+            <ion-col>
+                <ion-label style="font-size: 15px;" class="title">Choose category to filter</ion-label>
+                <ion-select placeholder="category" [(ngModel)]="category" (ionChange)="setFilteredItems()">
+                <ion-select-option style="font-size: 13px;" *ngFor="let item of categories.categories">{{item}}</ion-select-option>
+                </ion-select>
+            </ion-col>
+            <ion-col size="4">
+                <ion-icon style="width: 20px; height: 20px; margin-right: 5px;" name="pricetags" class="image" color="primary"></ion-icon>
+            </ion-col>
+        </ion-row>
+        <ion-item *ngIf="category != null">
+            <ion-input style="font-size: 15px;" type="text" clearInput placeholder="Enter product name"></ion-input>
+            <ion-icon style="width: 20px; height: 20px;" name="search" slot="end"></ion-icon>
         </ion-item>
-        <ion-item>
-          <ion-input type="number" formControlName="barcode" placeholder="Scan or Enter barcode" value="{{scannedcode}}" ></ion-input>
-          <ion-icon slot="end" name="qr-scanner" (click)="scan()"></ion-icon>
+
+
+        <ion-item no-padding text-center style="background-color: #dedede; color: var(--ion-color-primary); font-size: 15px;">
+            <ion-col size="2">
+                Icon
+            </ion-col>
+            <ion-col size="4">
+                Product
+            </ion-col>
+            <ion-col size="2">
+                Stock
+            </ion-col>
+            <ion-col size="2">
+                Units
+            </ion-col>
+            <ion-col size="2">
+                Price
+            </ion-col>
         </ion-item>
-        <ion-item (click)="selectCategory()">
-          <ion-label>Select Category </ion-label>
-          <ion-input placeholder="Select Category" required slot="end" formControlName="category" value="{{value}}">
-            <ion-icon name="arrow-dropdown" color="medium"></ion-icon>
-          </ion-input>
+        <ion-item no-padding text-center (click)="viewProduct(item)" *ngFor="let item of products" style="font-size: 13px; color: #737373; ">
+            <ion-col text-center size="2">
+                <img [src]="item.image" style="width: 50px;">
+            </ion-col>
+            <ion-col size="4">
+                {{item.product}}
+            </ion-col>
+            <ion-col size="2">
+                {{item.stock}}
+            </ion-col>
+            <ion-col size="2">
+                {{item.quantity}}
+            </ion-col>
+            <ion-col size="2">
+                {{item.currentprice}}
+            </ion-col>
         </ion-item>
-        <ion-item>
-          <ion-input type="number" formControlName="stock" placeholder="Enter Quantity available" required>
-          </ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input type="text" formControlName="quantity" placeholder="Enter Product Unit" required></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input type="text" formControlName="currentprice" placeholder="Enter Product Price" required></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input type="text" formControlName="description" placeholder="Enter Description"></ion-input>
-        </ion-item>
-        <!-- <ion-item>
-          <ion-label>Set product status </ion-label>
-          <ion-select formControlName="status" slot="end" placeholder="Select">
-            <ion-select-option selected>Available</ion-select-option>
-            <ion-select-option>Unavailable</ion-select-option>
-          </ion-select>
-          <ion-toggle checked slot="end" formControlName="status"></ion-toggle>
-        </ion-item> -->
-        <ion-item (click)="openCamera()">
-          <ion-label>Image:</ion-label>
-          <ion-input formControlName="image" value="{{image}}" readonly required></ion-input>
-          <ion-icon slot="end" name="camera"></ion-icon>
-        </ion-item>
-        <ion-button expand="full " type="submit" shape="round" [disabled]="!productForm.valid"
-          style="margin-top: 50px;">Save</ion-button>
-      </ion-list>
-    </form>
-  </div>
+    </div>
+
+
+    <!-- NEW PRODUCT -->
+    <div *ngIf="newProduct" class="body">
+        <ion-buttons slot="start" style="padding-top: 10px; margin-bottom: 5px;">
+            <ion-button (click)="close()">
+                <ion-icon size="small" style="width: 20px; height: 20px;" color="primary" name="close"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <form (ngSubmit)="addProduct()" [formGroup]="productForm" style="margin-right: 15px; margin-left: 15px;">
+            <ion-list no-padding>
+                <ion-item no-padding>
+                    <ion-input  style="font-size: 13px; color: #737373;" type="text" formControlName="product" placeholder="Enter Product name" required></ion-input>
+                </ion-item>
+                <ion-item no-padding>
+                    <ion-input  style="font-size: 13px; color: #737373;" no-padding type="number" formControlName="barcode" placeholder="Scan or Enter barcode" value="{{scannedcode}}" ></ion-input>
+                    <ion-icon style="width: 20px; height: 20px; float: right; right: 0px; position: absolute;" slot="end" name="qr-scanner" (click)="scan()"></ion-icon>
+                </ion-item>
+                <ion-item no-padding (click)="selectCategory()">
+                    <ion-label style="font-size: 13px; color: #737373;">Select Category </ion-label>
+                    <ion-input style="font-size: 13px; color: #737373; float: right; right: 0px;" no-padding placeholder="Select Category" required slot="end" formControlName="category" value="{{value}}">
+                        <ion-icon style="width: 20px; height: 20px;" name="arrow-dropdown" color="medium"></ion-icon>
+                    </ion-input>
+                </ion-item>
+                <ion-item no-padding>
+                    <ion-input style="font-size: 13px; color: #737373;" type="number" formControlName="stock" placeholder="Enter Quantity available" required>
+                </ion-input>
+                </ion-item>
+                <ion-item no-padding>
+                    <ion-input style="font-size: 13px; color: #737373;" type="text" formControlName="quantity" placeholder="Enter Product Unit" required></ion-input>
+                </ion-item>
+                <ion-item no-padding>
+                    <ion-input style="font-size: 13px; color: #737373;" type="text" formControlName="currentprice" placeholder="Enter Product Price" required></ion-input>
+                </ion-item>
+                <ion-item no-padding>
+                    <ion-input style="font-size: 13px; color: #737373;" type="text" formControlName="description" placeholder="Enter Description"></ion-input>
+                </ion-item>
+                <!-- <ion-item>
+                <ion-label>Set product status </ion-label>
+                <ion-select formControlName="status" slot="end" placeholder="Select">
+                    <ion-select-option selected>Available</ion-select-option>
+                    <ion-select-option>Unavailable</ion-select-option>
+                </ion-select>
+                <ion-toggle checked slot="end" formControlName="status"></ion-toggle>
+                </ion-item> -->
+                <ion-item no-padding (click)="openCamera()">
+                    <ion-label style="font-size: 13px; color: #737373;">Image:</ion-label>
+                    <ion-input style="font-size: 13px; color: #737373;" formControlName="image" value="{{image}}" readonly required></ion-input>
+                    <ion-icon style="width: 20px; height: 20px; float: right; right: 0px; position: absolute;" slot="end" name="camera"></ion-icon>
+                </ion-item>
+                <ion-button expand="full " type="submit" [disabled]="!productForm.valid"
+                style="margin-top: 50px; margin-bottom: 10px;">Save</ion-button>
+            </ion-list>
+        </form>
+    </div>
 </ion-content>
