--- a/src/app/products/products.page.scss
+++ b/src/app/products/products.page.scss
@@ -1,12 +1,12 @@
-ion-card {
-    border-radius:10px 10px 0px 0px;
-    background-color: #3880ff;
-    margin-left: 0px;
-    margin-right: 0px;
-    text-align: center;
-    margin-bottom: 0px;
-    text-shadow: 2px 2px 5px #3881f3;
-    height: 200px;
+.card-main{
+    color: var(--ion-color-medium);
+    background-color: white;
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    position: fixed;
+    bottom: 0px;
+    top: 100px;
+    overflow-y:scroll;
 }
 ion-slides {
     width: fit-content ;
@@ -23,7 +23,7 @@ ion-select{
     margin-top: 40%;
 }
 .body{
-    color: var(--ion-color-medium);
+    color: #737373;
     background-color: white;
     border-radius: 20px 20px 0px 0px;
     width: 100%;
@@ -36,7 +36,10 @@ ion-select{
     // margin-top: 40px;
 }
 .buttons{
-    padding-top: 60%;
+    margin-top: 30px;
+    // padding-top: 60%;
+    margin-left: 10px;
+    margin-right: 10px;
     text-align: center;
 }
 .title{
