--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-menu-button autoHide="false" ></ion-menu-button>
         </ion-buttons>
-        <ion-title text-center>Soko</ion-title>
+        <ion-title text-center>Konnect</ion-title>
         <ion-searchbar placeholder="Search for a shop "animated type="text" *ngIf="showSearch"></ion-searchbar>
         <!-- SEARCH BAR -->
         <ion-buttons slot="end">
