--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -1,3 +1,22 @@
+ // THIRD CONTENT
+ .third-content {
+    margin-left: 17px; 
+    margin-right: 0px; 
+    padding-top: 45px;
+    ion-list{
+        background: transparent;
+        ion-item {
+            --border-color: transparent!important;
+            --highlight-height: 0;
+            --background: none;
+            ion-input {
+                border-bottom: 1px solid #A9A9A9;
+            }
+        }
+    }
+}
+
+
 ion-card {
     border-radius: 5px;
     margin-left: 0px;
@@ -7,6 +26,7 @@ ion-card {
     }
    
   }
+
   
   a{
     text-decoration: none;
