--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -42,5 +42,5 @@ ion-card{
     background-color: #f3f3f3;
 }
 .complete{
-    background-color: #4883f0;
+    background-color: var(--ion-color-medium);
 }
