--- a/src/app/remove-category/remove-category.page.html
+++ b/src/app/remove-category/remove-category.page.html
@@ -7,13 +7,29 @@
     <ion-title  text-center>Remove  Category</ion-title>
   </ion-toolbar>
 <div class="container" *ngIf="show">
-  <ion-label padding class="label">Tap on a category to delete</ion-label>
-  <ion-item text-center *ngFor="let item of categories.categories">
-    <!-- <ion-icon name="bulb"></ion-icon> -->
+  <ion-label padding class="label">Slide left on a category to delete</ion-label>
+  <!-- <ion-item text-center *ngFor="let item of categories.categories">
+     <ion-icon name="bulb"></ion-icon> 
     <ion-label>{{item}}</ion-label>
-  </ion-item>
+  </ion-item> -->
+  <ion-item-sliding *ngFor="let item of categories.categories;let i = index">
+    <ion-item  class="ion-text-center">
+      <ion-label>{{item}}</ion-label>
+    </ion-item>
+    <ion-item-options>
+      <ion-item-option color="danger" (click)="DeleteCat(i)">
+        <ion-icon slot="end" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+        Delete
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
   
 </div>
 
 </div>
 </ion-content>
+<ion-footer>
+  <ion-button expand="full" (click)="newCat()">
+    Add New Category
+  </ion-button>
+</ion-footer>
