--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -44,3 +44,10 @@ ion-card{
 .complete{
     background-color: var(--ion-color-medium);
 }
+
+.active {
+    background-color: var(--ion-color-primary);
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
