Working on the Konnect section

--- a/src/app/comments/comments.page.html
+++ b/src/app/comments/comments.page.html
@@ -42,14 +42,14 @@
 
     <!-- NEW DESIGN -->
     <ion-list>
-        <ion-item class="content">
+        <ion-item class="content" *ngFor="let item of comments">
             <div class="top-space">
                 <div class="image">
-                  <img src="../../assets/images/profile.svg">
+                  <img src="{{item.userLogo}}">
                 </div>
                 <div class="description">
-                    <ion-label>Maxime Lee <span>1 h</span></ion-label>
-                    <ion-text>loved their service</ion-text><br>
+                    <ion-label>{{item.userName}} <span>{{item.time.toDate() | date}}</span></ion-label>
+                    <ion-text>{{ item.Text }}</ion-text><br>
                 </div>
             </div>
         </ion-item>
@@ -69,26 +69,33 @@
 
 
 <!-- NEW DESIGN -->
-<ion-footer padding>
-  <form style="background-color: #e4e4e4; position: fixed; bottom: 0px; left: 0px; right: 0px; width: 100%; border-top: 1px solid #9b9b9b;">
-   <!-- <div class="support"> -->
+<!-- <ion-footer padding>
+    <form style="background-color: #e4e4e4; position: fixed; bottom: 0px; left: 0px; right: 0px; width: 100%; border-top: 1px solid #9b9b9b;">
        <img src="../../assets/images/profile.svg" style="width: 25px; height: 25px; border-radius: 50%; margin-top: 11px; position: absolute; margin-left: 10px;">
-   <ion-row style="background-color: white; border-radius: 20px; height: 37px; margin-left: 40px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;">
-       <ion-col color="light" style="margin-top: -20px;">
-           <!-- <ion-item> -->
-               <!-- <textarea  required  name="message" [(ngModel)]="data.message" placeholder="Enter Message here" style="width: 100%;"
-               autocomplete="on" type="text"  autocorrect="on" >
-               </textarea> -->
-            <ion-textarea style="width: 100%; font-size: 13px;" clearOnEdit="true" required  name="message"
-               spellcheck="true" wrap="soft" placeholder="Add a comment..."></ion-textarea>
-           <!-- </ion-item> -->
-       </ion-col>
-       <ion-col size="2" text-align-center  style="margin-top: 4px;">
-           <!-- <ion-button [disabled]="!supportForm.valid" (click)="submit()" fill="clear"> -->
-           <ion-icon size="small" name="send" item-right color="primary" style="float: right; right: 0px;"></ion-icon>
-           <!-- </ion-button> -->
-           
-       </ion-col>
-   </ion-row>
-   <!-- </div> -->
- </form>
+        <ion-row style="background-color: white; border-radius: 20px; height: 37px; margin-left: 40px; margin-right: 40px; margin-bottom: 5px; margin-top: 5px;">
+            <ion-col color="light" style="margin-top: -5px; font-size: 13px;">
+                <ion-input type="text" style="color: #737373;" placeholder="Add a comment..." [(ngModel)]="commentText"></ion-input>
+            </ion-col>
+            <ion-col size="2" text-align-center  style="margin-top: 0px; position: absolute; float: right; right: 0px;">
+                <ion-button [disabled]="!commentText" (click)="postComment()" fill="clear">
+                        <ion-icon size="small" name="send" item-right color="primary" style="float: right; right: 0px;"></ion-icon>
+                </ion-button>
+            </ion-col>
+        </ion-row>
+    </form>
+</ion-footer> -->
+
+
+
+<!-- NEW DESIGN -->
+<ion-footer translucent>
+    <ion-item>
+        <ion-button expand="block" fill="clear" color="primary">
+            <ion-icon src="../../assets/images/profile.svg" slot="icon-only"></ion-icon>
+        </ion-button>
+        <ion-input  style="color: #737373; font-size: 13px;" type="text" placeholder="Add a comment..." [(ngModel)]="commentText"></ion-input>
+        <ion-button fill="clear" expand="block" [disabled]="!commentText" (click)="postComment()">
+            <ion-icon slot="icon-only" type="text" item-right name="send" style="float: right; right: 0px;"></ion-icon>
+        </ion-button>
+    </ion-item>
+</ion-footer>
