Working on Updating a product

--- a/src/app/productmodal/productmodal.page.scss
+++ b/src/app/productmodal/productmodal.page.scss
@@ -30,13 +30,13 @@
     padding-right: 10px;
     padding-top: 10px;
 }
-ion-input{
-    border: 1px solid var(--ion-color-medium);
-    width: 100%;
-}
-ion-label{
-    padding-top: 10px;
-}
+// ion-input{
+//     border: 1px solid var(--ion-color-medium);
+//     width: 100%;
+// }
+// ion-label{
+//     padding-top: 10px;
+// }
 textarea{
     border: 1px solid var(--ion-color-medium);
     width: 100%;
