--- a/src/app/order-stats/order-stats.page.scss
+++ b/src/app/order-stats/order-stats.page.scss
@@ -39,6 +39,10 @@ ion-card{
     position: fixed;bottom: 0px;overflow-y: scroll;width: 100%;top: 35%;
 }
 
+.activeMonth {
+    color: red;
+}
+
 
 @media only screen and (max-width: 320px) {
    .openOrder{
